# pytorch-template

./: README.md  config.toml  pyproject.toml  scripts.py
pytorch_template/: config.py  data.py  main.py  models.py  train.py  utils.py
