[project]
name = "pytorch-template"
version = "0.1.0"
description = "template for pytorch projects"
authors = [
    {name = "Jordan-M-Young"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ruff (>=0.9.5,<0.10.0)",
    "torch (>=2.6.0,<3.0.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "toml (>=0.10.2,<0.11.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
train = "scripts:train"


[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "N",  # PEP8 naming convetions
    "D"  # pydocstyle
]
ignore = [
    "C901",  # too complex
    "W191",  # indentation contains tabs
    "D401",  # imperative mood
    "N806", # uppercase variables
]   

[tool.ruff.lint.pydocstyle]
convention = "google"
